Bug 1375562 - Allow suspending, resuming and closing an AudioContext without triggering the statechange event and dealing with Promises. r=karlt

This allows suspending and resuming the context from the debugger without having
observable side-effects.

Differential Revision: https://phabricator.services.mozilla.com/D24915

--HG--
extra : moz-landing-system : lando